<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Facebook App Id -->
    <string name="app_id">784584141570570</string>

    <string name="app_name">SOSMessage</string>

    <string name="bugsense_key">46e31f4f</string>

    <string name="action_settings">Settings</string>
    <string-array name="items_array">
        <item>Phones</item>
        <item>Message</item>
        <item>Test</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="trusted_phones">Phone numbers:</string>
    <string name="test_message">THIS IS TEST MESSAGE</string>
    <string name="btn_test">SOS</string>
    <string name="btn_next">Next</string>
    <string name="enable_geo">Geolocation</string>
    <string name="enter_message">Enter Message:</string>
    <string name="geo_message">My geoposition</string>
    <string name="sos_message">Help! im in trouble</string>
    <string name="sms_sent">SMS sent!</string>

    <string name="sms_failed">SMS failed, please try again later!</string>
    <string name="btn_save">Save</string>
    <string name="enter_phones">Please, add phone numbers</string>
    <string name="hold">Please, Hold the button!</string>
    <string name="add_phone">Add phone</string>
    <string name="edit_message">Message</string>
    <string name="save">Saved</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="retry">Retry</string>

    <string name="enter_password">Enter password:</string>
    <string name="enter_login">Enter login:</string>
    <string name="lock_with_password">Lock with password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="settings">Settings</string>
    <string name="add_email">Add e-mail</string>
    <string name="add_server">Add server address</string>
    <string name="password">Password</string>
    <string name="set_password">Setup password</string>
    <string name="emails">E-mails</string>
    <string name="servers">Servers</string>
    <string name="media">Audio/video</string>
    <string name="roles">Wanna help</string>
    <string name="media_type">Media record:</string>
    <string name="media_length">Record length</string>
    <string name="no_account_message">Point your google-account in the phone settings</string>
    <string name="it_is_not_email">Please enter a valid e-mail</string>
    <string name="protect_description">protect yourself</string>
    <string name="logout">Logout</string>

    <string name="sos">SOS</string>
    <string name="sos_after">SOS in #n# min.</string>
    <string name="sos_activated">Alarm activated!</string>
    <string name="sos_cancel">Cancel</string>
    <string name="sos_canceled">Alarm canceled!</string>
    <string name="sos_already_active">Sos already active</string>
    <string name="no_settings_while_sos">Cannot change these settings while alarm is active</string>

    <string name="audio_is_recording">Audio recording. #n# min left</string>
    <string name="audio_record_finished">Audio recording finished</string>
    <string name="video_is_recording">Video recording. #n# min left</string>
    <string name="video_record_finished">Video recording finished</string>
    <string name="sos_with_delay">SOS with delay</string>
    <string name="recorded_media">Recorded #media# is in attachments.</string>
    <string name="video">video</string>
    <string name="audio">audio</string>

    <string name="login_with_FB">Login with Facebook</string>

    <string name="location_services_not_active">Location Services are not active</string>
    <string name="please_enable_location_services">Please enable Location Services and GPS</string>
    <string name="send_logs">Send logs</string>
    <string name="bad_logs_files">Files with logs do not exist</string>
    <string name="logs_successfully_sent">Files with logs successfully sent</string>
    <string name="please_write_a_description_of_issue">Please write a description of issue</string>
    <string name="email_for_logs">p2p_safety@googlegroups.com</string>
    <string name="victim_text">Victim: </string>
    <string name="upper_audio">Audio</string>
    <string name="upper_video">Video</string>
    <string name="finish_helping">I finished helping</string>
    <string name="stop_media_record">Stop #media# record</string>
    <string name="start_media_record">Start #media# record</string>
    <string name="media_record_error">Cannot start #media# record</string>
    <string name="not_supporter_mode">You are not in the Supporter mode</string>
    <string name="you_need_account">You need an account on p2psafety.net</string>

    <string name="help_needed">Somebody is in trouble. Can you help?</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>


    <string name="network_error">Something went wrong. Check your network connection.</string>
    <string name="connection">Connection</string>
    <string name="connection_is_out">Internet connection is not available, check the settings</string>
    <string name="connection_settings">Settings</string>

    <string name="support_screen">Support screen</string>
    <string name="movement_types">Movement types</string>
    <string name="set_your_roles">Set your roles:</string>
    <string name="set_movement_types">Set your movement types:</string>
    <string name="logged_out">You are successfully logged out</string>
    <string name="login">Login</string>
    <string name="ex_time">67:00</string>
    <string name="ex_victim_name">Luke Skywalker</string>
    <string name="ex_role_name">Role name</string>
    <string name="bad_login_or_password">Wrong login or password.</string>
    <string name="unsuccessful_authorization">Unsuccessful authorization.</string>
    <string name="viction_name">Victim name</string>
    <string name="passive_sos">Passive SOS</string>
    <string name="sos_reason">SOS reason</string>
    <string name="no_settings">Server has no settings. Please check the name of server or enter a new one</string>
    <string name="please_first_logout">Please first logout</string>
    <string name="supporter_mode">You are in support mode</string>
    <string name="please_authorize">Please log in on server</string>

    <string-array name="media_types">
        <item>No</item>
        <item>Audio</item>
        <item>Video</item>
    </string-array>

    <string-array name="media_length">
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
        <item>5 min</item>
    </string-array>
</resources>
