<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter login:"
        android:textSize="14sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/ld_login_edit"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="14sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ld_password_edit"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/protect_description"
        android:src="@android:drawable/bottom_bar"
        android:cropToPadding="true"
        android:background="@drawable/btn_sel"
        style="@style/TextButton"
        android:text="@string/login_with_FB"
        android:padding="@dimen/st_padding"
        android:layout_gravity="right" />

</LinearLayout>