<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SOS с задержкой"
        android:id="@+id/delayedSosBtn"
        android:background="@drawable/btn_sel"
        android:padding="@dimen/st_padding"
        android:layout_marginRight="2dp"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/protect_description"
            android:src="@drawable/sos_sel"/>
    </FrameLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/hold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/SOSRed"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_settings"
            style="@style/TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_sel"
            android:padding="@dimen/st_padding"
            android:singleLine="true"
            android:text="@string/settings"/>

    </LinearLayout>

</LinearLayout>