<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:visibility="gone"
                    android:id="@+id/frame_indent"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_protect"
                    android:src="@drawable/protect1"
                    android:focusable="true"
                    android:contentDescription="protect yourself"
                    android:adjustViewBounds="true"

                    />
        </LinearLayout>

        <!-- android:scaleType="fitXY" -->

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/SOSRed">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/add_phone"
                    android:id="@+id/textView"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/st_padding"
                    android:paddingBottom="@dimen/st_padding"
                    style="@style/TextButton"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/ibtn_addcontact"
                    android:layout_gravity="center"
                    android:src="@drawable/addnumber_sel"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/st_padding"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:ems="9"
                    android:id="@+id/edt_addphone"
                    android:phoneNumber="true"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"/>
            <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="@color/DimGray"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ibtn_addnumber"
                    android:layout_gravity="center"
                    android:src="@drawable/add_sel"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="1dp"
                    android:padding="@dimen/st_padding"
                    android:layout_marginRight="1dp"/>


        </LinearLayout>
        <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:layout_marginBottom="2dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center"/>

        <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/lsv_numbers"
                android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_test"
                android:id="@+id/btn_sos"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:background="@drawable/btn_sel"
                android:padding="@dimen/st_padding"
                style="@style/TextButton"
                android:singleLine="true"
                />

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/edit_message"
                android:id="@+id/btn_next"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:background="@drawable/btn_sel"
                android:padding="@dimen/st_padding"
                android:singleLine="true"
                style="@style/TextButton"/>
    </LinearLayout>

</LinearLayout>